fixed newsletter mobile spacing

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -248,7 +248,6 @@ svg.header-logo {
   }
   form {
     @include flex-column-center;
-    margin: 0 0rem;
     max-width: 42.5rem;
   }
   h3 {
